@@ -68,6 +68,9 @@ Function @code{x-atom-name} now accepts all 32 bits. Previously only
 They're @code{workspace-boundary-mode} and @code{workspace-send-boundary-mode}.
 
 @item Edge-Flip now works after resolution-change. [Christopher Bratusek]
+
+@item Sawfish now starts up correctly when receiving a session-id or
+session-prefix from GNOME-Session [Christopher Bratusek]
 @end itemize
 
 @item New Features
