@@ -3,6 +3,9 @@
 	* lisp/sawfish/wm/ext/edge-flip.jl: make edge-flipping work after
 	resolution-change
 
+	* lisp/sawfish/wm.jl: revert commit 379750f67d7227499a93b35dfa8c138d4ca5606f
+	fixes sawfish not starting up when receiving a session-id
+
 2010-08-13  Jeremy Hankins <nowan@nowan.org>
 	* lisp/sawfish/wm/viewport.jl: Fixed viewport init bug.
 
